<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0E8">

    <EditText
        android:id="@+id/edtNumber2"
        android:layout_width="389dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="text"
        android:hint="0"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_Number1"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/label_Number2"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber1" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="#D38DA5"
        android:onClick="buttonClick"
        android:text="@string/btnPlus"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:backgroundTint="#575151"
        android:onClick="buttonClick"
        android:text="@string/btnminus"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toTopOf="@+id/btnPlus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#575151"
        android:onClick="buttonClick"
        android:text="@string/btnDevide"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#feb062"
        android:onClick="buttonClick"
        android:text="@string/btnMul"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDivide"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <EditText
        android:id="@+id/edtNumber1"
        android:layout_width="389dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="15"
        android:inputType="text"
        android:hint="0"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
